tests/auto_rename/fail/invalid_syntax.stderr
error: unexpected end of input, expected identifier
 --> tests/auto_rename/fail/invalid_syntax.rs:3:1
  |
3 | #[auto_rename(output input)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `auto_rename` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `file_edit_inplace` in this scope
  --> tests/auto_rename/fail/invalid_syntax.rs:20:5
   |
20 |     file_edit_inplace("A.csv", "A.csv")
   |     ^^^^^^^^^^^^^^^^^ not found in this scope
